test/negative/ExtendInterfaceRepeated/A.java
import B.B;
public interface A extends B, B {}
